# esp32_wifi

./: .gitignore  CMakeLists.txt  README.md  sdkconfig
.cache/clangd/index/: Flash_Access.h.53A13C9A8C5A765A.idx  Flash_Access.h.A31C0DD5144E7C44.idx  FreeRTOS.h.1F564097059FB67C.idx  FreeRTOS.h.62D8DFCA45EF787B.idx  FreeRTOSConfig.h.11F45655DF5FF2A8.idx  FreeRTOSConfig.h.8FEBF4BA7E640D7C.idx  FreeRTOSConfig_arch.h.46406A7616D00F86.idx  FreeRTOSConfig_arch.h.5CD6E6688F42B1F9.idx  FreeRTOS_POSIX.h.2B14F3EECF41BDFD.idx  FreeRTOS_POSIX_internal.h.786018FB46F40A72.idx  FreeRTOS_POSIX_mqueue.c.131D0D30611FA6C4.idx  FreeRTOS_POSIX_portable.h.91516139C8996076.idx  FreeRTOS_POSIX_portable_default.h.44BB9A1DF1319B89.idx  FreeRTOS_POSIX_utils.c.BA49C7A735EB7336.idx  Hacl_Curve25519_joined.c.091FAC61905BA19E.idx  Hacl_Curve25519_joined.c.AED92EBEB015E634.idx  Partition.cpp.2C9AAF01EB37EEBE.idx  Partition.cpp.3A410AC1B5798885.idx  (+4734 more)
components/Application/: CMakeLists.txt
components/Application/wifi_deauther/: wifi_deauther.c
components/Application/wifi_deauther/include/: wifi_deauther.h
components/Core/: CMakeLists.txt  kernel.c
components/Drivers/: CMakeLists.txt
components/Services/: CMakeLists.txt
components/Services/cc1101/: cc1101.c
components/Services/cc1101/include/: cc1101.h
components/Services/wifi/: wifi_service.c
components/Services/wifi/include/: wifi_service.h
components/led_control/: CMakeLists.txt  led_control.c
components/wsl_bypasser/: CMakeLists.txt  wsl_bypasser.c
main/: CMakeLists.txt  main.c  main.c.old  scan.c
(+3 files in other folders)
